force-app/main/default/objects/FedEx_Rate_Quote__c/FedEx_Rate_Quote__c.object-meta.xml
<CustomObject>
    <label>FedEx Rate Quote</label>
    <nameField>
        <label>FedEx Rate Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Rate Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>