force-app/main/default/objects/FedEx_Rate_Quote__c/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>