force-app/main/default/objects/FedEx_Rate_Quote__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>FedEx_Shipment__c</referenceTo>
    <relationshipLabel>FedEx Rate Quotes</relationshipLabel>
    <relationshipName>FedEx_Rate_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>