force-app/main/default/objects/FedEx_Rate_Quote__c/fields/Total_Net_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Charge__c</fullName>
    <label>Total Net Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>