force-app/main/default/objects/FedEx_Rate_Quote__c/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <label>Transit Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>